Qual a sua matéria favorita?

--- a/index.html
+++ b/index.html
@@ -75,26 +75,26 @@ function clickedOn(idnum,childnum) {
 <p>&nbsp;</p>
 <div id="jogo">
 <img src="img/bracket_3.png" style="position:absolute;top:92px;left:0px;">
-<img src="img/logo.png" width="300" style="position:absolute;left:860px;top:0px;">
-<a href="javascript:void(0)" onclick="clickedOn(1,33)"><img id="img1" src="img/1.png" width="125" height="50" style="position:absolute;top:58px;left:15px"></a>
-<a href="javascript:void(0)" onclick="clickedOn(2,33)"><img id="img2" src="img/2.png" width="125" height="50" style="position:absolute;top:117px;left:15px">
-</a><a href="javascript:void(0)" onclick="clickedOn(3,34)"><img id="img3" src="img/3.png" width="125" height="50" style="position:absolute;top:175px;left:15px">
-</a><a href="javascript:void(0)" onclick="clickedOn(4,34)"><img id="img4" src="img/4.png" width="125" height="50" style="position:absolute;top:233px;left:15px">
-</a><a href="javascript:void(0)" onclick="clickedOn(5,35)"><img id="img5" src="img/5.png" width="125" height="50" style="position:absolute;top:291px;left:15px">
-</a><a href="javascript:void(0)" onclick="clickedOn(6,35)"><img id="img6" src="img/6.png" width="125" height="50" style="position:absolute;top:350px;left:15px">
-</a><a href="javascript:void(0)" onclick="clickedOn(7,36)"><img id="img7" src="img/7.png" width="125" height="50" style="position:absolute;top:407px;left:15px">
-</a><a href="javascript:void(0)" onclick="clickedOn(8,36)"><img id="img8" src="img/8.png" width="125" height="50" style="position:absolute;top:465px;left:15px">
+<img src="http://coc.thiagobogut.com/img/logo.png" width="300" style="position:absolute;left:860px;top:0px;">
+<a href="javascript:void(0)" onclick="clickedOn(1,33)"><img id="img1" src="http://coc.thiagobogut.com/img/1.png" width="125" height="50" style="position:absolute;top:58px;left:15px"></a>
+<a href="javascript:void(0)" onclick="clickedOn(2,33)"><img id="img2" src="http://coc.thiagobogut.com/img/2.png" width="125" height="50" style="position:absolute;top:117px;left:15px">
+</a><a href="javascript:void(0)" onclick="clickedOn(3,34)"><img id="img3" src="http://coc.thiagobogut.com/img/3.png" width="125" height="50" style="position:absolute;top:175px;left:15px">
+</a><a href="javascript:void(0)" onclick="clickedOn(4,34)"><img id="img4" src="http://coc.thiagobogut.com/img/4.png" width="125" height="50" style="position:absolute;top:233px;left:15px">
+</a><a href="javascript:void(0)" onclick="clickedOn(5,35)"><img id="img5" src="http://coc.thiagobogut.com/img/5.png" width="125" height="50" style="position:absolute;top:291px;left:15px">
+</a><a href="javascript:void(0)" onclick="clickedOn(6,35)"><img id="img6" src="http://coc.thiagobogut.com/img/6.png" width="125" height="50" style="position:absolute;top:350px;left:15px">
+</a><a href="javascript:void(0)" onclick="clickedOn(7,36)"><img id="img7" src="http://coc.thiagobogut.com/img/7.png" width="125" height="50" style="position:absolute;top:407px;left:15px">
+</a><a href="javascript:void(0)" onclick="clickedOn(8,36)"><img id="img8" src="http://coc.thiagobogut.com/img/8.png" width="125" height="50" style="position:absolute;top:465px;left:15px">
 </a>
-<a href="javascript:void(0)" onclick="clickedOn(33,49)"><img id="img33" src="img/pixel.png" width="180" height="72" style="position:absolute;top:72px;left:153px"></a>
-<a href="javascript:void(0)" onclick="clickedOn(34,49)"><img id="img34" src="img/pixel.png" width="180" height="72" style="position:absolute;top:188px;left:153px"></a>
-<a href="javascript:void(0)" onclick="clickedOn(35,50)"><img id="img35" src="img/pixel.png" width="180" height="72" style="position:absolute;top:305px;left:153px"></a>
-<a href="javascript:void(0)" onclick="clickedOn(36,50)"><img id="img36" src="img/pixel.png" width="180" height="72" style="position:absolute;top:421px;left:153px"></a>
+<a href="javascript:void(0)" onclick="clickedOn(33,49)"><img id="img33" src="http://coc.thiagobogut.com/img/pixel.png" width="180" height="72" style="position:absolute;top:72px;left:153px"></a>
+<a href="javascript:void(0)" onclick="clickedOn(34,49)"><img id="img34" src="http://coc.thiagobogut.com/img/pixel.png" width="180" height="72" style="position:absolute;top:188px;left:153px"></a>
+<a href="javascript:void(0)" onclick="clickedOn(35,50)"><img id="img35" src="http://coc.thiagobogut.com/img/pixel.png" width="180" height="72" style="position:absolute;top:305px;left:153px"></a>
+<a href="javascript:void(0)" onclick="clickedOn(36,50)"><img id="img36" src="http://coc.thiagobogut.com/img/pixel.png" width="180" height="72" style="position:absolute;top:421px;left:153px"></a>
     
     
-<a href="javascript:void(0)" onclick="clickedOn(49,57)"><img id="img49" src="img/pixel.png" width="250" height="100" style="position:absolute;top:109px;left:300px"></a>
-<a href="javascript:void(0)" onclick="clickedOn(50,57)"><img id="img50" src="img/pixel.png" width="250" height="100" style="position:absolute;top:342px;left:300px"></a>
+<a href="javascript:void(0)" onclick="clickedOn(49,57)"><img id="img49" src="http://coc.thiagobogut.com/img/pixel.png" width="250" height="100" style="position:absolute;top:109px;left:300px"></a>
+<a href="javascript:void(0)" onclick="clickedOn(50,57)"><img id="img50" src="http://coc.thiagobogut.com/img/pixel.png" width="250" height="100" style="position:absolute;top:342px;left:300px"></a>
 
-<a href="javascript:void(0)" onclick="clickedOn(57,63)"><img id="img57" src="img/pixel.png" width="350" height="140" style="position:absolute;top:199px;left:545px"></a>
+<a href="javascript:void(0)" onclick="clickedOn(57,63)"><img id="img57" src="http://coc.thiagobogut.com/img/pixel.png" width="350" height="140" style="position:absolute;top:199px;left:545px"></a>
 
 <div style="color:black;font-family:sans-serif;position:absolute;top:540px;left:1040px;opacity: 0" id="share">
     <div class="tw-share">
