Copa do Mundo COC Floripa

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Sim, é uma cópia do https://disneybracket.com/
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Copa do Mundo COC Floripa - Qual a sua matéria favorita?" />
 <meta property="og:description" content="Já estamos no clima da Copa do Mundo! Clique aqui e descubra qual sua matéria favorita no COC Floripa | Escola SEB" />
-<meta property="og:url" content="http://coc.thiagobogut.com/" />
+<meta property="og:url" content="https://cocfloripa.github.io/" />
 <meta property="og:site_name" content="COC Floripa | Escola SEB" />
 <meta property="article:publisher" content="A" />
 <meta property="article:section" content="Geral" />
