--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function clickedOn(idnum,childnum) {
 <div id="imagemzinha" align="center"></div>
 <p>&nbsp;</p>
 <div id="jogo">
-<img src="http://coc.thiagobogut.com/img/bracket_3.png" style="position:absolute;top:92px;left:0px;">
+<img src="img/bracket_3.png" style="position:absolute;top:92px;left:0px;">
 <img src="http://coc.thiagobogut.com/img/logo.png" width="300" style="position:absolute;left:860px;top:0px;">
 <a href="javascript:void(0)" onclick="clickedOn(1,33)"><img id="img1" src="http://coc.thiagobogut.com/img/1.png" width="125" height="50" style="position:absolute;top:58px;left:15px"></a>
 <a href="javascript:void(0)" onclick="clickedOn(2,33)"><img id="img2" src="http://coc.thiagobogut.com/img/2.png" width="125" height="50" style="position:absolute;top:117px;left:15px">
